# python-ffmpeg

./: LICENSE  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish.yml
ffmpeg/: __init__.py  ffmpeg.py
ffmpeg/asyncio/: __init__.py  ffmpeg.py
tests/: conftest.py  test_asyncio_timeout.py  test_timeout.py
